CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

SET( PROJECT_NAME CPP11_Tutorial ) # change project name here

SET( SOURCE_DIRECTORY ${PROJECT_SOURCE_DIR}/src )

IF( CMAKE_COMPILER_IS_GNUCXX )
    SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11" )
ENDIF()

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_BINARY_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}
)

ADD_EXECUTABLE( 
	UniquePtr_Test 
	${SOURCE_DIRECTORY}/uniqueptr.cxx
)

ADD_EXECUTABLE( 
	SharedPtr_Test 
	${SOURCE_DIRECTORY}/sharedptr.cxx
)

ADD_EXECUTABLE( 
	LambdaFunc_Test 
	${SOURCE_DIRECTORY}/lambda.cxx
)
